fixed letter spacing

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -18,4 +18,5 @@
   align-self: center;
   margin-left: 7%;
   color:white;
+  letter-spacing: 4px;
 }
