--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -31,6 +31,7 @@
     flex: 1;
     text-align: center;
     align-self: center;
+    letter-spacing: 4px;
 }
 
 #placeorder {
@@ -39,6 +40,7 @@
     flex: 1;
     text-align: center;
     align-self: center;
+    letter-spacing: 4px;
 }
 
 #coverimg2 {
