--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -13,7 +13,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     font-size:60px;
-
+    letter-spacing: 4px;
 }
 
 .input {
@@ -23,7 +23,7 @@
     border-radius: 2rem;
     font-family: 'Ubuntu', sans-serif;
     border-color: #26325a;
-    
+    letter-spacing: 3px;
 }
 
 .btnlogin {
