--- a/src/pages/signuprest/signuprest.css
+++ b/src/pages/signuprest/signuprest.css
@@ -19,6 +19,7 @@
     padding-top: 20px;
     padding-bottom: 40px;
     font-size:50px;
+    letter-spacing: 4px;
 }
 
 
@@ -29,6 +30,7 @@
     border-radius: 2rem;
     font-family: 'Ubuntu', sans-serif;
     border-color: #26325a;
+    letter-spacing: 4px;
     
 }
 
